# burn

./: LICENSE  README.md  burn.cabal  burn.mkv  stack.yaml
src/: Burn.lhs
