name:                burn
version:             0.1.0.0
synopsis:            A weather model. But with more fire.
license:             BSD3
license-file:        LICENSE
author:              Christian Marie
maintainer:          christian@ponies.io
copyright:           2016 Christian Marie <christian@ponies.io>
category:            Magic
build-type:          Simple
cabal-version: >= 1.10

executable burn
  hs-source-dirs:      src
  main-is:             Burn.lhs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5, data-memocombinators, sdl2, sdl2-cairo, linear, containers,  comonad
  default-language:    Haskell2010
